--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,10 +270,14 @@ header {
   font-size: 1.1875rem;
   padding: 1.25rem 5rem;
   border-radius: 5px;
-  background-color: #ff3571;
+  background-color: var(--color-secondary);
   color: white;
   margin-top: 30px;
   display: inline-block;
+}
+
+.newsletter a:hover {
+  background-image: linear-gradient(to right, #ff3571, blue);
 }
 
 /* =================== FOOTER ==================== */
